<resources>
    <string name="app_name" translatable="false">VeggyStock</string>
    <color name="green">#ace7ba</color>
    <string name="name">Name:</string>
    <string name="provider">Provider:</string>
    <string name="price">Price:</string>
    <string name="address">Address:</string>
    <string name="save_item">Save Item</string>
    <string name="theme">Choose a theme</string>
    <string name="productimage">Product Image</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="podcast">Podcast</string>
    <string name="Youtube">Youtube</string>
    <string name="play">Play</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hecho_por">Hecho Por Miguel Reid Ruiz</string>
    <string name="dam">De 2 de DAM</string>
    <string name="parte">Parte muy inicial del proyecto final</string>
    <string name="saludos">Saludos!</string>
    <string name="camera">Camera</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="more">More</string>
    <string name="content_description_share">Share option</string>
    <string name="content_description_delete">Delete option</string>
    <string name="content_description_more">More option</string>
    <string name="page_title">Items</string>
    <string name="favorite">Favorite</string>
    <string name="content_description_favorite">Favorite item</string>
    <string name="search">Search</string>
    <string name="content_description_search">Search an item</string>
    <string name="content_description_newItem">New Item</string>
    <string name="newItem">New Item</string>
    <string name="content_description_orderBy">Order By</string>
    <string name="orderBy">Order By</string>
    <string name="content_description_scan">Scan Item</string>
    <string name="scan">"Scan "</string>
    <string name="items">Items</string>
    <string name="favourite_items">Favourite Items</string>
    <string name="close">Close</string>
    <string name="supporting_text">Do you want to save the item?</string>
    <string name="save">Save</string>
    <string name="no">No</string>
    <string name="marked_favourite">Item marked as favourite</string>
    <string name="marked_not_favourite">Item not marked as favourite</string>
    <string name="item_deleted">Item deleted</string>
    <string name="item_not_found">This item is not on our database</string>
    <string name="item_not_saved">Item not saved</string>
    <string name="content_description_search_database">Search in database</string>
    <string name="search_database">Search in database</string>
    <string name="introduce_value">You must introduce a value</string>
    <string name="item_saved">Item saved</string>
    <string name="signed_in">You signed in!</string>
    <string name="not_signed_in">You didn\'t sign in</string>
    <string name="content_description_maps">Maps</string>
    <string name="maps">Maps</string>
    <string name="restaurants">Search Restaurants</string>
    <string name="select_option">Select an option!</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main_compose">MainActivityCompose</string>
</resources>