<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_new"
        android:contentDescription="@string/content_description_newItem"
        android:icon="@drawable/newbutton"
        android:title="@string/newItem"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/orderBy"
        android:contentDescription="@string/content_description_orderBy"
        android:title="@string/orderBy"
        app:showAsAction="ifRoom"
        android:icon="@drawable/sort"
        />

    <item
        android:id="@+id/maps"
        android:contentDescription="@string/content_description_maps"
        android:title="@string/maps"
        app:showAsAction="ifRoom"
        android:icon="@drawable/maps"
        />
</menu>